--- a/RaffleSite/templates/main.html
+++ b/RaffleSite/templates/main.html
@@ -16,7 +16,6 @@
 <body>
 <nav>
     <div class="header">
-        <div class="logo"><span class="logo-1">Wax</span><span class="logo-2">Raffle</span></div>
         <div class="nav-elems">
             <div class="arrow">
                 <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor"
@@ -24,13 +23,17 @@
                     <path d="M7.247 11.14L2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z"/>
                 </svg>
             </div>
-            <a class="nav-elem first selected" href="#"><span class="nav-text">Login Through WAX</span></a>
-            <div class="ln"></div>
-            <a class="nav-elem" href="#"><span class="nav-text">Purchase</span></a>
-            <div class="ln"></div>
-            <a class="nav-elem" href="#"><span class="nav-text">Try Your Luck</span></a>
-            <div class="ln"></div>
-            <a class="nav-elem" href="#"><span class="nav-text">Receive WAX</span></a>
+            <div class="logo"><span class="logo-1">Wax</span><span class="logo-2">Raffle</span></div>
+            <div class="wrap">
+                <a class="nav-elem first" href="#"><span
+                        class="nav-text">Login Through WAX</span></a>
+                <div class="ln"></div>
+                <a class="nav-elem" href="#"><span class="nav-text">Purchase</span></a>
+                <div class="ln"></div>
+                <a class="nav-elem" href="#"><span class="nav-text">Try Your Luck</span></a>
+                <div class="ln"></div>
+                <a class="nav-elem" href="#"><span class="nav-text">Receive WAX</span></a>
+            </div>
         </div>
     </div>
 </nav>
