--- a/RaffleSite/templates/main.html
+++ b/RaffleSite/templates/main.html
@@ -11,6 +11,7 @@
           href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="{% static 'js/waxjs.js' %}"></script>
     <title>{{ title }}</title>
 </head>
 <body>
@@ -19,7 +20,21 @@
     <a class="nav-elem" href="#">Purchase</a>
     <a class="nav-elem" href="#">Try Your Luck</a>
     <a class="nav-elem" href="#">Swap</a>
+    {% if not user.is_authenticated %}
     <a class="login-btn" href="#">Login</a>
+    {% else %}
+    <span class="user-wrapper">
+        <a class="user-info username"
+           href="https://wax.atomichub.io/explorer/account/{{user.username}}">{{user}}</a>
+        <span class="logout-btn">
+            <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor"
+                 class="bi bi-door-closed" viewBox="0 0 16 16">
+            <path d="M3 2a1 1 0 0 1 1-1h8a1 1 0 0 1 1 1v13h1.5a.5.5 0 0 1 0 1h-13a.5.5 0 0 1 0-1H3V2zm1 13h8V2H4v13z"/>
+            <path d="M9 9a1 1 0 1 0 2 0 1 1 0 0 0-2 0z"/>
+            </svg>
+        </span>
+    </span>
+    {% endif %}
 </nav>
 </body>
 <script type="text/javascript" src="{% static 'js/script.js' %}"></script>
