--- a/RaffleSite/templates/main.html
+++ b/RaffleSite/templates/main.html
@@ -23,17 +23,19 @@
     {% if not user.is_authenticated %}
     <a class="login-btn" href="#">Login</a>
     {% else %}
-    <span class="user-wrapper">
-        <a class="user-info username"
-           href="https://wax.atomichub.io/explorer/account/{{user.username}}">{{user}}</a>
-        <span class="logout-btn">
-            <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor"
-                 class="bi bi-door-closed" viewBox="0 0 16 16">
-            <path d="M3 2a1 1 0 0 1 1-1h8a1 1 0 0 1 1 1v13h1.5a.5.5 0 0 1 0 1h-13a.5.5 0 0 1 0-1H3V2zm1 13h8V2H4v13z"/>
-            <path d="M9 9a1 1 0 1 0 2 0 1 1 0 0 0-2 0z"/>
-            </svg>
+    <div class="user-wrapper">
+        <span class="user-info">
+            <span class="username">{{user}}</span>
+            <br>
+            <span class="menu">
+                <br>
+                <a class="menu-btn profile-btn" target="_blank"
+                   href="https://wax.atomichub.io/explorer/account/{{user.username}}">Profile</a>
+                <br>
+                <a class="menu-btn logout-btn" href="#">Logout</a>
+            </span>
         </span>
-    </span>
+    </div>
     {% endif %}
 </nav>
 </body>
