--- a/RaffleSite/static/css/main.css
+++ b/RaffleSite/static/css/main.css
@@ -4,6 +4,20 @@ body {
     background: #494949;
 }
 
+.head-bg {
+    position: absolute;
+    width: 100%;
+    height: 78px;
+    background: #404040;
+    z-index: -1;
+}
+
+.wrapper {
+    margin-right: auto;
+    margin-left: auto;
+    max-width: 1920px;
+}
+
 .header {
     background: #404040;
     display: flex;
@@ -82,7 +96,7 @@ body {
     border: 1px solid #ffa365;
     border-radius: 15px;
     color: white;
-    transition: all 300ms;
+    transition: all 1000ms;
 }
 
 .user-wrapper {
@@ -94,7 +108,7 @@ body {
 
 .user-info:hover {
     text-decoration: none;
-    color: #E50280;
+    color: white;
 }
 
 .username {
@@ -102,18 +116,30 @@ body {
     position: relative;
     padding-left: 7px;
     padding-right: 7px;
+    background: #ffa365;
+    border-radius: 15px;
+    transition: all 300ms;
 }
 
 .menu-btn {
+    display: inline-block;
     font-family: 'Work Sans', sans-serif;
     font-size: 20px;
     color: white;
     text-decoration: none;
+    width: 100%;
 }
 
 .menu-btn:hover {
-    color: #E50280;
+    color: white;
+    background: #f09352;
     text-decoration: none;
+}
+
+.space {
+    display: block;
+    width: 1px;
+    height: 15px;
 }
 
 .menu {
@@ -123,13 +149,21 @@ body {
     background: #ffa365;
     transform: scaleY(0);
     transform-origin: top;
-    transition: all 400ms;
-    margin-left: -52px;
-    border-radius: 20px;
-    margin-top: -28px;
+    transition: all 300ms;
+    margin-top: -15px;
     padding-bottom: 3px;
+    border-radius: 0 0 15px 15px;
 }
 
-.menu-active {
+.menu.menu-active {
     transform: scaleY(1);
+}
+
+.username.menu-active {
+    border-bottom: 1px solid #f49756;
+    border-radius: 15px 15px 0 0;
+}
+
+.user-info.menu-active {
+    border-radius: 15px 15px 0 0;
 }
