--- a/RaffleSite/templates/main.html
+++ b/RaffleSite/templates/main.html
@@ -15,29 +15,32 @@
     <title>{{ title }}</title>
 </head>
 <body>
-<nav class="header">
-    <img src="{% static 'img/favicon.png'%}" alt="Лого" class="logo">
-    <a class="nav-elem" href="#">Purchase</a>
-    <a class="nav-elem" href="#">Try Your Luck</a>
-    <a class="nav-elem" href="#">Swap</a>
-    {% if not user.is_authenticated %}
-    <a class="login-btn" href="#">Login</a>
-    {% else %}
-    <div class="user-wrapper">
+<div class="head-bg"></div>
+<div class="wrapper">
+    <div class="header">
+        <img src="{% static 'img/favicon.png'%}" alt="Лого" class="logo">
+        <a class="nav-elem" href="#">Purchase</a>
+        <a class="nav-elem" href="#">Try Your Luck</a>
+        <a class="nav-elem" href="#">Swap</a>
+        {% if not user.is_authenticated %}
+        <a class="login-btn" href="#">Login</a>
+        {% else %}
+        <div class="user-wrapper">
         <span class="user-info">
             <span class="username">{{user}}</span>
             <br>
             <span class="menu">
-                <br>
+                <a class="space"></a>
                 <a class="menu-btn profile-btn" target="_blank"
                    href="https://wax.atomichub.io/explorer/account/{{user.username}}">Profile</a>
                 <br>
                 <a class="menu-btn logout-btn" href="#">Logout</a>
             </span>
         </span>
+        </div>
+        {% endif %}
     </div>
-    {% endif %}
-</nav>
+</div>
 </body>
 <script type="text/javascript" src="{% static 'js/script.js' %}"></script>
 </html>
