--- a/RaffleSite/templates/main.html
+++ b/RaffleSite/templates/main.html
@@ -18,10 +18,22 @@
 <div class="head-bg"></div>
 <div class="wrapper">
     <div class="header">
-        <img src="{% static 'img/favicon.png'%}" alt="Лого" class="logo">
-        <a class="nav-elem" href="#">Purchase</a>
-        <a class="nav-elem" href="#">Try Your Luck</a>
-        <a class="nav-elem" href="#">Swap</a>
+        <img src="{% static 'img/favicon.png'%}" alt="Logo" class="logo">
+        {% if selected == 1%}
+            <a class="nav-elem selected" href="/purchase/">Purchase</a>
+        {% else %}
+            <a class="nav-elem" href="/purchase/">Purchase</a>
+        {% endif %}
+        {% if selected == 2%}
+            <a class="nav-elem selected" href="#">Try Your Luck</a>
+        {% else %}
+            <a class="nav-elem" href="#">Try Your Luck</a>
+        {% endif %}
+        {% if selected == 3%}
+            <a class="nav-elem selected" href="#">Swap</a>
+        {% else %}
+            <a class="nav-elem" href="#">Swap</a>
+        {% endif %}
         {% if not user.is_authenticated %}
         <a class="login-btn" href="#">Login</a>
         {% else %}
@@ -40,7 +52,17 @@
         </div>
         {% endif %}
     </div>
+    <div class="content">
+         {% block content %}
+            <h1 class="footer-text">Main page, click on purchase button</h1>
+         {% endblock %}
+    </div>
+    <footer>
+        <h1 class="footer-text">We're not in Twitter 'cause Wewery is completely lazy</h1>
+        <h1 class="footer-text">All rights reserved © 2021 Bloodmain</h1>
+    </footer>
 </div>
+<div class="foot-bg"></div>
 </body>
 <script type="text/javascript" src="{% static 'js/script.js' %}"></script>
 </html>
