--- a/RaffleSite/templates/purchase.html
+++ b/RaffleSite/templates/purchase.html
@@ -10,7 +10,7 @@
         <img src="{% static 'img/test-pack.png' %}" alt="..." class="pack-img">
         <textarea class="pack-description" disabled>Pack: Test Pack
 Series: Series 1</textarea>
-        <a class="purchase-btn" href="#"><span class="purchase-text">Purchase (0d&nbsp12h&nbsp23m&nbsp54s)</span></a>
+        <a class="purchase-btn" href="#"><span class="purchase-text">Purchase</span></a>
     </div>
     <div class="pack bronze-pack">
         <img src="{% static 'img/shop-bg-bronze.png' %}" alt="...">
