--- a/RaffleSite/static/css/main.css
+++ b/RaffleSite/static/css/main.css
@@ -27,7 +27,6 @@ footer {
     height: 100px;
     border-top: 1px solid #262832;
     margin-left: 650px;
-
     text-align: center;
 }
 
@@ -35,9 +34,28 @@ footer {
     color: white;
     font-family: 'Work Sans', sans-serif;
     font-size: 20px;
-    margin-left: 30px;
-    margin-top: 20px;
     z-index: 1;
+    opacity: 0.8;
+    margin-left: 120px;
+}
+
+.footer-img {
+    cursor: pointer;
+    width: 60px;
+    height: 30px;
+    padding-right: 30px;
+}
+
+.footer-content {
+    margin-top: 20px;
+}
+
+.first-line {
+    margin-left: 150px;
+}
+
+.tg {
+    margin-left: 20px;
 }
 
 .foot-bg {
