--- a/RaffleSite/static/css/inventory.css
+++ b/RaffleSite/static/css/inventory.css
@@ -24,8 +24,8 @@
 }
 
 .inventory::-webkit-scrollbar-track {
-    margin-top: 42px;
-    margin-bottom: 42px;
+    margin-top: 50px;
+    margin-bottom: 50px;
 }
 
 .inventory-pack {
@@ -39,12 +39,12 @@
     margin-top: -35px;
     width: 170px;
     height: 170px;
+    transition: all 300ms;
 }
 
 .open-text {
     opacity: 0.8;
-    padding-right: 20px;
-    padding-left: 20px;
+    padding: 20px;
 }
 
 .open-btn {
@@ -55,9 +55,45 @@
     border: 1px solid white;
     border-radius: 15px;
     position: relative;
-    margin-left: -200px;
-    margin-right: 100px;
+    margin-left: -215px;
+    margin-right: 115px;
     top: 80px;
+    transition: all 300ms;
+    width: 130px;
+    height: 25px;
+}
+
+.open-btn:hover {
+    background: #1a203c;
+}
+
+.open-btn:active, .open-btn:focus {
+    outline: none;
+}
+
+.inventory-pack-bg {
+    transition: all 300ms;
+    width: 320px;
+    height: 260px;
+}
+
+.inventory-pack:hover > .inventory-pack-bg {
+    width: 352px;
+    height: 286px;
+}
+
+.inventory-pack:hover > .inventory-pack-img {
+    width: 187px;
+    height: 187px;
+    margin-left: -269px;
+}
+
+.inventory-pack:hover > .open-btn {
+    margin-left: -230px;
+    margin-right: 130px;
+    width: 143px;
+    height: 27px;
+    top: 87px
 }
 
 .open-btn:hover {
